retrieved/unpackaged/objects/Jewellery__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Jewellery_Image__c</fullName>
        <formula>Image( Picture__c, Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jewellery Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Magical_Protection__c</fullName>
        <label>Magical Protection</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Picture__c</fullName>
        <label>Picture</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>11</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>Jewellery</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Jewellery Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jewellery</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>